--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       MARY JOY WE NI CRUSHY 😅😅🤌
     </div>
 
-    <img src="https://files.catbox.moe/hnpr2x.jpeg" alt="Butterfly" class="decoration butterfly" style="top: 20%; left: 10%;">
-    <img src="https://files.catbox.moe/hnpr2x.jpeg" alt="Butterfly" class="decoration butterfly" style="top: 60%; left: 80%;">
-    <img src="https://files.catbox.moe/hnpr2x.jpeg" alt="Butterfly" class="decoration butterfly" style="top: 40%; left: 30%;">
+    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 40%; left: 30%;">
+    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 90%; left: 180%;">
+    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 60%; left: 50%;">
 
     </div>
 
