--- a/index.html
+++ b/index.html
@@ -1,94 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Valentine's Day</title>
-    <style>
-        body {
-            background-color: #ffe6f2; /* Light pink background */
-            overflow: hidden; /* Prevent scrollbars */
-            display: flex;
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
-            min-height: 100vh; /* Ensure full viewport height */
-            margin: 0; /* Remove default margins */
-        }
-
-        #video-container {
-            position: relative; /* For positioning decorations */
-            width: 640px; /* Adjust as needed */
-            height: 360px; /* Maintain aspect ratio */
-        }
-
-        #video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Cover the entire container */
-        }
-
-        .decoration {
-            position: absolute;
-            pointer-events: none; /* Allow clicks to pass through */
-            z-index: 1; /* Ensure decorations are on top */
-            animation: float 5s linear infinite; /* Adjust animation duration */
-        }
-
-        .butterfly {
-            width: 50px; /* Adjust butterfly size */
-            height: auto;
-            animation: fly 3s linear infinite; /* Butterfly flight animation */
-        }
-
-        #message {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 2em; /* Adjust font size */
-            color: #8e24aa; /* Darker pink/purple */
-            font-family: sans-serif; /* Choose a font */
-            text-align: center;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
-            z-index: 2; /* Ensure message is on top */
-            background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent white background for readability */
-            padding: 10px 20px; /* Add some padding */
-            border-radius: 10px; /* Rounded corners */
-        }
-
-
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0); }
-        }
-
-        @keyframes fly {
-          0% { transform: translateX(0); opacity: 0;}
-          25% { transform: translateX(25%); opacity: 1;}
-          50% { transform: translateX(50%);}
-          75% { transform: translateX(75%); opacity: 1;}
-          100% { transform: translateX(100%); opacity: 0;}
-
-        }
-    </style>
-</head>
-<body>
-
-<div id="video-container">
-    <video id="video" autoplay muted loop>
-        <source src="https://files.catbox.moe/ukug2f.mp4" type="video/mp4">  Your browser does not support the video tag.
-    </video>
-
-    <div id="message">
-      MARY JOY WE NI CRUSHY 😅😅🤌
-    </div>
-
-    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 40%; left: 30%;">
-    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 90%; left: 180%;">
-    <img src="https://files.catbox.moe/27boxr.jpg" alt="Butterfly" class="decoration butterfly" style="top: 60%; left: 50%;">
-
-    </div>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Valentine's Day Flip Book</title> <link rel="stylesheet" href="style.css"> </head> <body> <div id="hedlinecontainer"> <div id="shine">❤️MAMAS LOVE MARY JOY💞</div> </div> <div class="gallery"> <img src="https://files.catbox.moe/ego74j.jpg" alt="hun pie"> <img src="https://files.catbox.moe/hnpr2x.jpeg" alt="shes my queen"> <img src="https://files.catbox.moe/tc4xjw.jpg" alt="my wiffey"> <img src="https://files.catbox.moe/27boxr.jpg" alt="my babe"> <img src="https://files.catbox.moe/hnpr2x.jpeg" alt="sweery"> </div> </body> </html>
